--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
